module/core/former/tests/inc/enum_unit_tests/compile_fail/subform_scalar_on_unit.stderr
error: TEST ERROR: #[subform_scalar] cannot be used on unit variants. V3
 --> tests/inc/enum_unit_tests/compile_fail/subform_scalar_on_unit.rs:3:10
  |
3 | #[derive(Former)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Former` (in Nightly builds, run with -Z macro-backtrace for more info)
